Agregando campos para agregar recursos al crear eventos

--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -30,8 +30,6 @@
               != t('.delete_file')
               = form.check_box :"remove_#{field._name}"
 
-= parent.name
-= @content_type.name
-- if parent.name=='events'
-  = form.input "content[new_resource][name]", :as => :string, :label => "Name:"
-  = form.input "content[new_resource][file]", :as => :file, :label => "File:", :css => 'file'
+- if @content_type.name.downcase=='events'
+  = form.input_tag "content[new_resource][name]", :as => :string, :label => "Name:"
+  = form.input_tag "content[new_resource][file]", :as => :file, :label => "File:", :css => 'file'
