--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -31,5 +31,13 @@
               = form.check_box :"remove_#{field._name}"
 
 - if @content_type.name.downcase=='events'
-  = form.input_tag "content[new_resource][name]", :as => :string, :label => "Name:"
-  = form.input_tag "content[new_resource][file]", :as => :file, :label => "File:", :css => 'file'
+  %fieldset.inputs
+    %legend
+      %span Add resource
+        %ol
+          %li.text{:id => "content_resource_name_input"}
+            = form.label_tag "Name:"
+            = form.text_field_tag "content[new_resource][name]"
+          %li.text{:id => "content_resource_file_input"}
+            = form.label_tag "File:"
+            = form.file_field_tag "content[new_resource][file]"
