--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -33,7 +33,8 @@
 - if @content_type.name.downcase=='events'
   %fieldset.inputs
     %legend
-      %span Add resource
+      %span
+        Add resource
         %ol
           %li.text{:id => "content_resource_name_input"}
             = form.label_tag "Name:"
