Agregando campos para agregar recursos al crear eventos

--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -40,4 +40,4 @@
           %span + add
       %li.file{:id => "content_resource_file_input"}
         = label_tag "resource_custom_field_3_0", "File:"
-        = file_field_tag "resource_custom_field_3_0", "resource[custom_field_3][]"
+        = file_field_tag "resource[custom_field_3][]", :id => "resource_custom_field_3_0"
