--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -41,3 +41,8 @@
       %li.file{:id => "content_resource_file_input"}
         = label_tag "resource_custom_field_3_0", "File:"
         = file_field_tag "resource[custom_field_3][]", :id => "resource_custom_field_3_0"
+    %ol
+      - unless @content.resources.empty?
+        - @content.resources.each do |resource|
+          %li
+            = resource.custom_field_3_filename
