--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -41,8 +41,10 @@
       %li.file{:id => "content_resource_file_input"}
         = label_tag "resource_custom_field_3_0", "File:"
         = file_field_tag "resource[custom_field_3][]", :id => "resource_custom_field_3_0"
-    %ol
-      - unless @content.resources.empty?
+    
+    - unless @content.resources.empty?
+      %ul{ :id => 'contents-list', :class => 'list'}
         - @content.resources.each do |resource|
-          %li
+          %li.content{ :id => "content-#{resource._id}" }
             = resource.custom_field_3_filename
+            = link_to image_tag('admin/list/icons/trash.png'), admin_content_path('resources', resource), :class => 'remove', :confirm => t('admin.messages.confirm'), :method => :delete
