--- a/app/views/admin/shared/_menu.html.haml
+++ b/app/views/admin/shared/_menu.html.haml
@@ -1,5 +1,6 @@
 %ul#menu
   = admin_menu_item('contents', admin_pages_url)
-  = admin_menu_item('assets', admin_asset_collections_url)
-  = admin_menu_item('settings', edit_admin_current_site_url)
+  - if current_site.memberships.where(:account_id => current_admin.id).first.admin?
+    = admin_menu_item('assets', admin_asset_collections_url)
+    = admin_menu_item('settings', edit_admin_current_site_url)
   %li.clear
