Restringir ciertas secciones del administrador segun tipo de usuario

--- a/app/views/admin/shared/_menu.html.haml
+++ b/app/views/admin/shared/_menu.html.haml
@@ -1,3 +1,4 @@
+= debug(current_site.memberships)
 %ul#menu
   = admin_menu_item('contents', admin_pages_url)
   - if current_site.memberships.where(:account_id => current_admin.id).first.admin?
