--- a/app/views/admin/contents/edit.html.haml
+++ b/app/views/admin/contents/edit.html.haml
@@ -4,7 +4,8 @@
   = render 'admin/shared/menu/contents'
 
 - content_for :buttons do
-  = admin_button_tag t('admin.contents.index.edit'), edit_admin_content_type_url(@content_type), :class => 'edit'
+  - if current_site.memberships.where(:account_id => current_admin.id).first.admin?
+    = admin_button_tag t('admin.contents.index.edit'), edit_admin_content_type_url(@content_type), :class => 'edit'
   = admin_button_tag t('admin.contents.index.new'), new_admin_content_url(@content_type.slug), :class => 'new'
 
 %p= @content_type.description
