Agregando soporte para idioma a contenidos

--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -28,6 +28,8 @@
   = f.input :cache_strategy, :as => :select, :collection => options_for_page_cache_strategy, :include_blank => false, :wrapper_html => { :style => "#{'display: none' if @page.redirect?}" }
 
   = f.input :redirect_url, :required => true, :wrapper_html => { :style => "#{'display: none' unless @page.redirect?}" }
+  
+  = select_tag "page[locale]", '<option value="es">Español</option><option value="en">English</option>'
 
 = render 'editable_elements', :page => @page
 
