Agregando soporte para idioma a contenidos

--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -29,8 +29,9 @@
 
   = f.input :redirect_url, :required => true, :wrapper_html => { :style => "#{'display: none' unless @page.redirect?}" }
   
-  = label_tag "page_locale", "Idioma:"
-  = select_tag "page[locale]", options_for_select([['Español', 'es'], ['English', 'en']])
+  %li{ :class => "select optional" }
+    = label_tag "page_locale", "Idioma:"
+    = select_tag "page[locale]", raw(options_for_select([['Español', 'es'], ['English', 'en']]))
 
 = render 'editable_elements', :page => @page
 
