--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -29,6 +29,8 @@
               &nbsp;/&nbsp;
               != t('.delete_file')
               = form.check_box :"remove_#{field._name}"
+    %li{ :class => "select optional" }
+      = f.input :locale, :as => :select, :collection => [['Español', 'es'], ['English', 'en']], :include_blank => false
 
 - if @content_type.name.downcase=='events'
   %fieldset.inputs
