Agregando soporte para idioma a contenidos

--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -30,7 +30,7 @@
               != t('.delete_file')
               = form.check_box :"remove_#{field._name}"
     %li{ :class => "select optional" }
-      = f.input :locale, :as => :select, :collection => [['Español', 'es'], ['English', 'en']], :include_blank => false
+      = form.input :locale, :as => :select, :collection => [['Español', 'es'], ['English', 'en']], :include_blank => false
 
 - if @content_type.name.downcase=='events'
   %fieldset.inputs
