Arreglado bug que no mostraba el formulario para agregar recursos a un evento

--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -32,7 +32,7 @@
   %li{ :class => "select optional" }
     = form.input :locale, :as => :select, :collection => [['Español', 'es'], ['English', 'en']], :include_blank => false
 
-- if @content_type.name.downcase=='events'
+- if @content_type.slug=='events'
   %fieldset.inputs
     %legend
       %span Add resource
