--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -4,7 +4,8 @@
   - form.object.custom_fields.each do |field|
     - required = highlighted_field_name == field._name || field.required
     - if @content_type.slug=='events' && field._alias=="category"
-      = form.select field._alias.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
+      %li{ :class => "select optional" }
+        = form.select field._alias.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']], :label => field.label
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
