--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -5,7 +5,9 @@
     - required = highlighted_field_name == field._name || field.required
     - if @content_type.slug=='events' && field._alias=="category"
       %li{ :class => "select optional" }
-        = form.select field._alias.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']], :label => "Categoría"
+        %label{:for => "content_category"}
+          "Categoría"
+        = form.select field._alias.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
