--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -6,8 +6,9 @@
     - if @content_type.slug=='events' && field._alias=="category"
       %li{ :class => "select optional" }
         %label{:for => "content_category"}
-          "Categoría"
-        = form.select field._alias.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
+          Categoría
+        = form.custom_input field._alias.to_sym, :label => field.label, :hint => field.hint, :css => 'toggle' do
+          = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
