--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -3,12 +3,7 @@
 = form.inputs :name => title || :attributes do
   - form.object.custom_fields.each do |field|
     - required = highlighted_field_name == field._name || field.required
-    - if @content_type.slug=='events' && field._alias=="category"
-      %li{ :class => "select optional" }
-        %label{:for => "content_category"}
-          Categoría
-        = form.custom_input field._alias.to_sym, :label => field.label, :hint => field.hint, :css => 'toggle' do
-          = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
+    - if @content_type.slug=='events' && field._alias=='category'
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
