--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -4,6 +4,9 @@
   - form.object.custom_fields.each do |field|
     - required = highlighted_field_name == field._name || field.required
     - if @content_type.slug=='events' && field._alias=='category'
+      %li{ :class => "select optional" }
+        = form.custom_input field._alias.to_sym, :label => field.label, :hint => field.hint, :css => 'toggle' do
+          = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
