--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -7,6 +7,14 @@
       %li{ :class => "select optional" }
         = form.custom_input field._alias.to_sym, :label => field.label, :hint => field.hint, :css => 'toggle' do
           = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
+    - elsif field._alias=='gallery'
+      %li{ :class => "input optional" }
+        %ul.gallery
+          - @galleries.each do |gallery|
+            %li
+              %a.gallery{:href => "#", :id => gallery['id']}
+                = gallery['name']
+              = form.hidden_field_tag field._alias.to_sym
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
