--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -14,7 +14,7 @@
             %li
               %a.gallery{:href => "#", :id => gallery['id']}
                 = gallery['name']
-        = hidden_field_tag :content, field._alias.to_sym
+        = hidden_field_tag "content[#{field._alias.to_sym}]"
     - else
       - if field.string?
         = form.input field._alias.to_sym, :label => field.label, :hint => field.hint, :required => required
