--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -9,6 +9,8 @@
           = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
     - elsif field._alias=='gallery'
       %li{ :class => "input optional" }
+        %label{:for => "content_gallery"}
+          = field.label
         %ul.gallery
           - @galleries.each do |gallery|
             %li
