Estilos en la lista de galerias en eventos/noticias

--- a/public/stylesheets/admin/formtastic_changes.css
+++ b/public/stylesheets/admin/formtastic_changes.css
@@ -500,7 +500,12 @@ form.formtastic fieldset.preview li .inside {
 }
 
 form.formtastic fieldset.preview li img { }
-
+form.formstatic ul.gallery{
+  display: inline-block;
+  height: 200px;
+  overflow-y: scroll;
+  padding-right: 10px;
+}
 
 /* ___ main error message ___ */
 
@@ -527,4 +532,3 @@ div.formError {
 }
 
 div.fieldWithErrors { display: inline; }
-
