Mostrar albums al agregar/editar eventos y noticias

--- a/public/stylesheets/admin/formtastic_changes.css
+++ b/public/stylesheets/admin/formtastic_changes.css
@@ -500,11 +500,12 @@ form.formtastic fieldset.preview li .inside {
 }
 
 form.formtastic fieldset.preview li img { }
-form.formstatic ul.gallery{
+form.formtastic ul.gallery{
   display: inline-block;
   height: 200px;
   overflow-y: scroll;
   padding-right: 10px;
+  font-size: 0.9em;
 }
 
 /* ___ main error message ___ */
