--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -8,13 +8,14 @@
         = form.custom_input field._alias.to_sym, :label => field.label, :hint => field.hint, :css => 'toggle' do
           = form.select field._name.to_sym, [['Feria', 'faire'], ['Door to Door', 'door2door'], ['Workshop', 'workshop'], ['Fam Trips', 'fam-trips']]
     - elsif field._alias=='gallery'
-      %li{ :class => "input optional" }
+      %li{ :class => "select optional" }
         %label{:for => "content_gallery"}
           = field.label
         %ul.gallery
           - @galleries.each do |gallery|
             %li
               %a.gallery{:href => "#", :id => gallery['id']}
+                %img{:src => gallery.cover_photo}
                 = gallery['name']
         = hidden_field_tag "content[#{field._alias.to_sym}]"
     - else
