Devolver array de FBAlbum en FBPage.albums

--- a/public/stylesheets/admin/formtastic_changes.css
+++ b/public/stylesheets/admin/formtastic_changes.css
@@ -502,10 +502,21 @@ form.formtastic fieldset.preview li .inside {
 form.formtastic fieldset.preview li img { }
 form.formtastic ul.gallery{
   display: inline-block;
+  width: 75%;
   height: 200px;
   overflow-y: scroll;
   padding-right: 10px;
   font-size: 0.9em;
+}
+form.formtastic ul.gallery li{
+  padding: 6px 4px;
+}
+form.formtastic ul.gallery li.selected{
+  background:#dee1ec;
+}
+
+form.formtastic ul.gallery li a img{
+	vertical-align:middle;
 }
 
 /* ___ main error message ___ */
