--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -13,10 +13,13 @@
           = field.label
         %ul.gallery
           - @galleries.each do |gallery|
-            %li
-              %a.gallery{:href => "#", :id => gallery.id}
-                %img{:src => gallery.cover_photo}
-                = gallery.data['name']
+            - if @content.custom_field_10 && gallery.id == @content.custom_field_10
+              %li.selected
+            - else
+              %li
+                %a.gallery{:href => "#", :id => gallery.id}
+                  %img{:src => gallery.cover_photo}
+                    = gallery.data['name']
         = hidden_field_tag "content[#{field._alias.to_sym}]", @content.custom_field_10
     - else
       - if field.string?
