--- a/app/views/admin/custom_fields/_custom_form.html.haml
+++ b/app/views/admin/custom_fields/_custom_form.html.haml
@@ -14,11 +14,15 @@
         %ul.gallery
           - @galleries.each do |gallery|
             - if @content.custom_field_10 && gallery.id == @content.custom_field_10
-              - class = "selected"
-            %li{:class => class}
-              %a.gallery{:href => "#", :id => gallery.id}
-                %img{:src => gallery.cover_photo}
-                  = gallery.data['name']
+              %li{:class => "selected"}
+                %a.gallery{:href => "#", :id => gallery.id}
+                  %img{:src => gallery.cover_photo}
+                    = gallery.data['name']
+            - else
+              %li
+                %a.gallery{:href => "#", :id => gallery.id}
+                  %img{:src => gallery.cover_photo}
+                    = gallery.data['name']
         = hidden_field_tag "content[#{field._alias.to_sym}]", @content.custom_field_10
     - else
       - if field.string?
