--- a/public/stylesheets/admin/formtastic_changes.css
+++ b/public/stylesheets/admin/formtastic_changes.css
@@ -514,7 +514,10 @@ form.formtastic ul.gallery li{
 form.formtastic ul.gallery li.selected{
   background:#dee1ec;
 }
-
+form.formtastic ul.gallery li a{
+  padding: 5px;
+  border: solid 1px #c1c1c1;
+}
 form.formtastic ul.gallery li a img{
 	vertical-align:middle;
 }
